examples/errors/structslice.go
package errors

type Ex2 struct {
	Slice []Ex2
}
